--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -135,6 +135,7 @@
                             android:textSize="16dp"
                             android:padding="10dp"
                             android:textColor="#ffffff"
+                            android:singleLine="true"
                             />
 
                     </LinearLayout>
@@ -192,6 +193,7 @@
                         android:textSize="16dp"
                         android:padding="10dp"
                         android:textColor="#ffffff"
+                        android:singleLine="true"
                         />
 
                 </LinearLayout>
@@ -697,6 +699,7 @@
                                 android:textSize="16dp"
                                 android:padding="10dp"
                                 android:textColor="#ffffff"
+                                android:singleLine="true"
                                 />
 
                         </LinearLayout>
