--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -97,6 +97,7 @@
                         android:textSize="16dp"
                         android:padding="10dp"
                         android:textColor="#ffffff"
+                        android:singleLine="true"
                         />
 
                 </LinearLayout>
