--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,16 +88,16 @@
                         android:id="@+id/edt_email"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:hint="Email"
-                        android:textColorHint="#FFFFFF"
-                        android:background="#00000000"
                         android:layout_gravity="center_horizontal"
+                        android:background="#00000000"
                         android:fontFamily="Roboto-Regular"
+                        android:hint="Email"
                         android:inputType="textEmailAddress"
-                        android:textSize="16dp"
                         android:padding="10dp"
                         android:textColor="#ffffff"
-                        />
+                        android:textColorHint="#FFFFFF"
+                        android:singleLine="true"
+                        android:textSize="16dp" />
 
                 </LinearLayout>
 
@@ -121,6 +121,7 @@
                         android:textSize="16dp"
                         android:padding="10dp"
                         android:textColor="#ffffff"
+                        android:singleLine="true"
                         />
 
                 </LinearLayout>
