--- a/app/src/main/res/layout/tab_my_profile.xml
+++ b/app/src/main/res/layout/tab_my_profile.xml
@@ -613,6 +613,7 @@
                         android:fontFamily="Roboto-Regular"
                         android:textSize="16sp"
                         android:textColor="#4A4A4A"
+                        android:singleLine="true"
                         />
 
                     </LinearLayout>
@@ -1590,7 +1591,6 @@
                                         android:background="@drawable/home_spinner_border">
 
 
-
                                     <EditText
                                         android:id="@+id/edt_subCaste"
                                         android:layout_width="match_parent"
@@ -1602,6 +1602,7 @@
                                         android:fontFamily="Roboto-Regular"
                                         android:textSize="16sp"
                                         android:textColor="#4A4A4A"
+                                        android:singleLine="true"
                                         />
                                     </LinearLayout>
                                 </LinearLayout>
@@ -2471,6 +2472,7 @@
                                         android:fontFamily="Roboto-Regular"
                                         android:textSize="16sp"
                                         android:textColor="#4A4A4A"
+                                        android:singleLine="true"
                                         />
 
                                     </LinearLayout>
@@ -2829,6 +2831,7 @@
                                 android:fontFamily="Roboto-Regular"
                                 android:textSize="16sp"
                                 android:textColor="#4A4A4A"
+                                    android:singleLine="true"
                                 />
                                 </LinearLayout>
                             </LinearLayout>
@@ -2860,6 +2863,7 @@
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
+                                    android:singleLine="true"
                                     />
                                 </LinearLayout>
                             </LinearLayout>
@@ -2935,6 +2939,7 @@
                                         android:fontFamily="Roboto-Regular"
                                         android:textSize="16sp"
                                         android:textColor="#4A4A4A"
+                                        android:singleLine="true"
                                         />
 
                                     </LinearLayout>
@@ -2968,6 +2973,7 @@
                                         android:fontFamily="Roboto-Regular"
                                         android:textSize="16sp"
                                         android:textColor="#4A4A4A"
+                                        android:singleLine="true"
                                         />
 
                                     </LinearLayout>
@@ -3001,6 +3007,7 @@
                                         android:fontFamily="Roboto-Regular"
                                         android:textSize="16sp"
                                         android:textColor="#4A4A4A"
+                                        android:singleLine="true"
                                         />
                                     </LinearLayout>
 
@@ -3485,6 +3492,8 @@
                                         android:fontFamily="Roboto-Regular"
                                         android:textSize="16sp"
                                         android:textColor="#4A4A4A"
+                                        android:singleLine="true"
+
                                         />
                                     </LinearLayout>
                                 </LinearLayout>
@@ -3552,6 +3561,7 @@
                                         android:fontFamily="Roboto-Regular"
                                         android:textSize="16sp"
                                         android:textColor="#4A4A4A"
+                                        android:singleLine="true"
                                         />
 
                                     </LinearLayout>
@@ -3587,6 +3597,7 @@
                                             android:fontFamily="Roboto-Regular"
                                             android:textSize="16sp"
                                             android:textColor="#4A4A4A"
+                                            android:singleLine="true"
                                             />
                                     </LinearLayout>
                                 </LinearLayout>
@@ -3618,6 +3629,7 @@
                                         android:fontFamily="Roboto-Regular"
                                         android:textSize="16sp"
                                         android:textColor="#4A4A4A"
+                                        android:singleLine="true"
                                         />
                                 </LinearLayout>
 
@@ -3650,7 +3662,9 @@
                                         android:fontFamily="Roboto-Regular"
                                         android:textSize="16sp"
                                         android:textColor="#4A4A4A"
+                                        android:singleLine="true"
                                         />
+
                                     </LinearLayout>
 
                                 </LinearLayout>
