--- a/app/src/main/res/layout/tab_my_profile.xml
+++ b/app/src/main/res/layout/tab_my_profile.xml
@@ -67,7 +67,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:layout_marginTop="5dp"
-                android:text="A few words about Neha"
+                android:text="A few words about"
                 android:textAlignment="viewStart"
                 android:textAllCaps="false"
                 android:textColor="#4A4A4A"
@@ -2796,7 +2796,7 @@
                                         app:ms_hintTextSize="16sp"
                                         app:ms_hint="Education"
                                         app:ms_hintColor="#F2146E"
-                                        app:ms_multiline="false"
+                                        app:ms_multiline="true"
                                         app:ms_thickness="0.5dp"
                                         android:popupBackground="#e6e6e6"
                                         android:popupElevation="@dimen/floating_label_bottom_spacing"
