--- a/app/src/main/res/layout/tab_profile_detail.xml
+++ b/app/src/main/res/layout/tab_profile_detail.xml
@@ -65,7 +65,7 @@ android:background="#ffffff"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:layout_marginTop="5dp"
-                android:text="A few words about Neha"
+                android:text="A few words about"
                 android:textAlignment="viewStart"
                 android:textAllCaps="false"
                 android:textColor="#4A4A4A"
