bug resolution,header,fullscreen

--- a/app/src/main/res/layout/tab_partner_preferences.xml
+++ b/app/src/main/res/layout/tab_partner_preferences.xml
@@ -85,7 +85,7 @@
                 <LinearLayout
 
                     android:layout_width="match_parent"
-                    android:layout_height="400dp"
+                    android:layout_height="450dp"
                     android:background="#0c000000"
                     android:orientation="horizontal"
                     android:weightSum="2"
@@ -96,7 +96,7 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:weightSum="8"
+                        android:weightSum="9"
                         android:orientation="vertical"
                         android:layout_marginLeft="5dp"
                         android:layout_marginStart="5dp"
@@ -106,7 +106,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
-                            android:layout_weight="1"
+                            android:layout_weight="2"
                             android:text="Age :"
                             android:fontFamily="Roboto-Regular"
                             android:textSize="16sp"
@@ -200,7 +200,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:orientation="vertical"
-                                android:weightSum="8"
+                                android:weightSum="9"
                                 android:visibility="visible">
 
 
@@ -208,7 +208,7 @@
                                     android:id="@+id/tv_age"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
-                                    android:layout_weight="1"
+                                    android:layout_weight="2"
                                     android:text="Age :"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
@@ -299,7 +299,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:orientation="vertical"
-                                android:weightSum="8"
+                                android:weightSum="9"
                                 android:layout_marginTop="0dp"
                                 android:visibility="invisible">
 
@@ -307,21 +307,18 @@
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
-                                    android:orientation="horizontal"
+                                    android:orientation="vertical"
                                     android:layout_weight="1"
                                     android:layout_marginBottom="0dp"
-                                    android:weightSum="2"
+
                                     >
 
                                     <LinearLayout
-                                        android:layout_width="0dp"
-                                        android:layout_weight="1"
+                                        android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:layout_gravity="center"
                                         android:layout_marginBottom="4dp"
                                         android:layout_marginTop="5dp"
-                                        android:layout_marginRight="2dp"
-                                        android:layout_marginEnd="2dp"
                                         android:background="@drawable/home_spinner_border">
 
                                         <fr.ganfra.materialspinner.MaterialSpinner
@@ -332,7 +329,7 @@
                                             android:layout_marginEnd="0dp"
                                             app:ms_alignLabels="false"
                                             app:ms_arrowColor="#00000000"
-                                            app:ms_arrowSize="10dp"
+                                            app:ms_arrowSize="0dp"
                                             app:ms_baseColor="#00000000"
                                             app:ms_enableErrorLabel="false"
                                             app:ms_enableFloatingLabel="false"
@@ -348,21 +345,27 @@
                                             android:visibility="visible"
                                             />
 
-
                                     </LinearLayout>
+                                </LinearLayout>
 
-                                    <LinearLayout
-                                        android:layout_width="0dp"
-                                        android:layout_weight="0"
-                                        android:layout_height="match_parent"
-                                        android:layout_gravity="center"
-                                        android:layout_marginBottom="4dp"
-                                        android:layout_marginTop="5dp"
-                                        android:layout_marginLeft="2dp"
-                                        android:layout_marginStart="2dp"
-                                        android:background="@drawable/home_spinner_border">
 
-                                        <fr.ganfra.materialspinner.MaterialSpinner
+                                <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="0dp"
+                                        android:layout_marginBottom="0dp"
+                                        android:orientation="vertical"
+                                        android:layout_weight="1"
+                                        >
+
+                                        <LinearLayout
+                                            android:layout_width="match_parent"
+                                            android:layout_height="match_parent"
+                                            android:layout_gravity="center"
+                                            android:layout_marginBottom="4dp"
+                                            android:layout_marginTop="5dp"
+                                            android:background="@drawable/home_spinner_border">
+
+                                    <fr.ganfra.materialspinner.MaterialSpinner
                                             android:id="@+id/sp_age_to"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
@@ -385,12 +388,10 @@
                                             android:popupElevation="@dimen/floating_label_bottom_spacing"
                                             android:visibility="visible"
                                             />
-
+                                        </LinearLayout>
 
                                     </LinearLayout>
 
-
-                                </LinearLayout>
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
@@ -565,13 +566,6 @@
                                     </LinearLayout>
                                 </LinearLayout>
 
-
-
-
-
-
-
-
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
@@ -702,15 +696,14 @@
                                 </LinearLayout>
 
                             </LinearLayout>
+
+
                         </FrameLayout>
-
-
 
                     </LinearLayout>
 
                 </LinearLayout>
             </LinearLayout>
-
 
 
             <Button
