gallery,bug resolution

--- a/app/src/main/res/layout/activity_tab_parent_matches.xml
+++ b/app/src/main/res/layout/activity_tab_parent_matches.xml
@@ -43,6 +43,15 @@
 
             />
 
+        <FrameLayout
+            android:id="@+id/Container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/bottomNavigationView"
+            android:layout_below="@+id/toolbar_main"
+            android:background="#00000000"
+            android:visibility="visible"/>
+
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
