--- a/app/src/main/res/layout/tab_change_password.xml
+++ b/app/src/main/res/layout/tab_change_password.xml
@@ -44,10 +44,9 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="2dp"
+                android:visibility="gone"
                 />
         </LinearLayout>
-
-
 
 
 
@@ -60,7 +59,7 @@
                 android:layout_marginRight="30dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginBottom="80dp"
-                android:layout_marginTop="30dp">
+                android:layout_marginTop="10dp">
 
 
 
@@ -172,7 +171,6 @@
                 </LinearLayout>
 
 
-
                 <Button
                     android:id="@+id/btn_change"
                     android:layout_width="match_parent"
@@ -193,11 +191,6 @@
                     android:textSize="18dp"
                     android:textColor="#F2146E"
                     android:textAlignment="center"/>
-
-
-
-
-
 
 
             </LinearLayout>
