--- a/app/src/main/res/layout/tab_change_email.xml
+++ b/app/src/main/res/layout/tab_change_email.xml
@@ -44,6 +44,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="2dp"
+                android:visibility="gone"
                 />
         </LinearLayout>
 
