--- a/app/src/main/res/layout/tab_gallery_photo.xml
+++ b/app/src/main/res/layout/tab_gallery_photo.xml
@@ -51,7 +51,8 @@
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:textColor="#ffffff"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:visibility="gone"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -73,6 +74,22 @@
                     android:layout_gravity="center"
                     android:src="@mipmap/userpic"/>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:background="#00000000">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/rv_prof_gallery"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginBottom="15dp"
+                        android:background="#00000000">
+
+                    </android.support.v7.widget.RecyclerView>
+                </LinearLayout>
 
                 <Button
                     android:id="@+id/btn_submit_photo"
