--- a/app/src/main/res/layout/tab_profile_detail.xml
+++ b/app/src/main/res/layout/tab_profile_detail.xml
@@ -40,7 +40,7 @@ android:background="#ffffff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="#FFFFFF">
+                android:background="#00000000">
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_prof_gallery"
