--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -118,6 +118,7 @@
                         android:textSize="16dp"
                         android:padding="10dp"
                         android:textColor="#ffffff"
+                        android:inputType="text"
                         />
 
                 </LinearLayout>
@@ -300,6 +301,7 @@
                         android:fontFamily="Roboto-Regular"
                         android:textSize="16dp"
                         android:padding="10dp"
+                        android:inputType="phone"
                         android:textColor="#ffffff"
                         android:singleLine="true"
                         />
