--- a/app/src/main/res/layout/row_list_who_viewed.xml
+++ b/app/src/main/res/layout/row_list_who_viewed.xml
@@ -3,8 +3,8 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
  <!--   <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -147,7 +147,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.20"
                             android:layout_gravity="center_horizontal"
-                            android:src="@mipmap/iconintrested"
+                            app:srcCompat="@mipmap/iconintrested"
                             android:background="#00000000"/>
                     </LinearLayout>
 
@@ -224,8 +224,6 @@
                             android:layout_weight="1"/>
 
 
-
-
                     </LinearLayout>
 
                     <LinearLayout
@@ -271,7 +269,6 @@
                             android:textSize="14sp"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="#4A4A4A"
-
                             android:layout_weight="1"/>
                     </LinearLayout>
 
@@ -289,8 +286,6 @@
                     android:layout_weight="2"
                     android:orientation="horizontal"
                     android:weightSum="2">
-
-
 
                     <Button
                         android:id="@+id/btn_row_sendMail"
