--- a/app/src/main/res/layout/tab_profile_detail.xml
+++ b/app/src/main/res/layout/tab_profile_detail.xml
@@ -381,7 +381,7 @@ android:background="#ffffff"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                      android:layout_weight="1"
-                    android:text="Myself"
+                    android:text="Not Specified"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
                     android:textColor="#4A4A4A"
@@ -392,7 +392,7 @@ android:background="#ffffff"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Name :"
+                    android:text="Not Specified"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
                     android:textColor="#4A4A4A"
@@ -404,7 +404,7 @@ android:background="#ffffff"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Body Type :"
+                    android:text="Not Specified"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
                     android:textColor="#4A4A4A"
@@ -416,7 +416,7 @@ android:background="#ffffff"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Complexion :"
+                    android:text="Not Specified"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
                     android:textColor="#4A4A4A"
@@ -428,7 +428,7 @@ android:background="#ffffff"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Age :"
+                    android:text="Not Specified"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
                     android:textColor="#4A4A4A"
@@ -440,7 +440,7 @@ android:background="#ffffff"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Physical Status"
+                    android:text="Not Specified"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
                     android:textColor="#4A4A4A"
@@ -452,7 +452,7 @@ android:background="#ffffff"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Height :"
+                    android:text="Not Specified"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
                     android:textColor="#4A4A4A"
@@ -464,7 +464,7 @@ android:background="#ffffff"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Weight"
+                    android:text="Not Specified"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
                     android:textColor="#4A4A4A"
@@ -476,7 +476,7 @@ android:background="#ffffff"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Mother Tongue :"
+                    android:text="Not Specified"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
                     android:textColor="#4A4A4A"
@@ -487,7 +487,7 @@ android:background="#ffffff"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Marital Status"
+                    android:text="Not Specified"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
                     android:textColor="#4A4A4A"
@@ -499,7 +499,7 @@ android:background="#ffffff"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Eating Habits :"
+                    android:text="Not Specified"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
                     android:textColor="#4A4A4A"
@@ -511,7 +511,7 @@ android:background="#ffffff"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Drinking Habits"
+                    android:text="Not Specified"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
                     android:textColor="#4A4A4A"
@@ -523,7 +523,7 @@ android:background="#ffffff"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Smoking Habits :"
+                    android:text="Not Specified"
                     android:fontFamily="Roboto-Regular"
                     android:textSize="16sp"
                     android:textColor="#4A4A4A"
@@ -775,7 +775,7 @@ android:background="#ffffff"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
-                                    android:text="Hindu"
+                                    android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
@@ -787,7 +787,7 @@ android:background="#ffffff"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
-                                    android:text="Brahmin - Deshastha"
+                                    android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
@@ -799,7 +799,7 @@ android:background="#ffffff"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
-                                    android:text=""
+                                    android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
@@ -811,7 +811,7 @@ android:background="#ffffff"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
-                                    android:text="Rassi:"
+                                    android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
@@ -823,7 +823,7 @@ android:background="#ffffff"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
-                                    android:text="Star :"
+                                    android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
@@ -835,7 +835,7 @@ android:background="#ffffff"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
-                                    android:text="Gothra :"
+                                    android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
@@ -847,7 +847,7 @@ android:background="#ffffff"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
-                                    android:text="Dosham :"
+                                    android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
@@ -859,7 +859,7 @@ android:background="#ffffff"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
-                                    android:text="Time of Birth :"
+                                    android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
@@ -871,7 +871,7 @@ android:background="#ffffff"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
-                                    android:text="Country of Birth :"
+                                    android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
@@ -883,7 +883,7 @@ android:background="#ffffff"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
-                                    android:text="State of Birth"
+                                    android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
@@ -895,7 +895,7 @@ android:background="#ffffff"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
-                                    android:text="City of Birth :"
+                                    android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
@@ -907,7 +907,7 @@ android:background="#ffffff"
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
-                                    android:text="Chart Style"
+                                    android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
