inflate exception for Button,crash on open,find,searchresult

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -95,6 +95,7 @@
                     app:ms_thickness="0.5dp"
                     android:popupBackground="#e6e6e6"
                     android:popupElevation="@dimen/floating_label_bottom_spacing"
+
                     />
                </LinearLayout>
 
@@ -119,6 +120,7 @@
                         android:padding="10dp"
                         android:textColor="#ffffff"
                         android:inputType="text"
+                        tab
                         />
 
                 </LinearLayout>
