--- a/app/src/main/res/layout/tab_my_profile.xml
+++ b/app/src/main/res/layout/tab_my_profile.xml
@@ -34,6 +34,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
                 android:layout_gravity="center"
+                android:src="@mipmap/userprofile"
                />
 
             <LinearLayout
