--- a/app/src/main/res/layout/tab_my_profile.xml
+++ b/app/src/main/res/layout/tab_my_profile.xml
@@ -907,7 +907,7 @@
                         app:ms_errorColor="#FFFFFF"
                         app:ms_typeface="fonts/Roboto-Regular.ttf"
                         app:ms_hintTextSize="16sp"
-                        app:ms_hint="Mothrt Tongue"
+                        app:ms_hint="Mother Tongue"
                         app:ms_hintColor="#F2146E"
                         app:ms_multiline="false"
                         app:ms_thickness="0.5dp"
@@ -2010,6 +2010,7 @@
                 android:textAllCaps="false"
                 android:textColor="#4A4A4A"
                 android:textSize="16sp" />
+
             <LinearLayout
                 android:id="@+id/ll_groomBrideLoc"
                 android:layout_width="match_parent"
